--- a/NetCoreIdentityApp/Views/_ViewImports.cshtml
+++ b/NetCoreIdentityApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using NetCoreIdentityApp
 @using NetCoreIdentityApp.Models
+@using Entities.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
