--- a/NetCoreIdentityApp/Views/Home/SignUp.cshtml
+++ b/NetCoreIdentityApp/Views/Home/SignUp.cshtml
@@ -8,7 +8,13 @@
 <div class="row">
     <div class="col-md-6 offset-md-3">
         <h2>Kullanıcı Kayıt Formu</h2>
-        <form>
+        @if (TempData["SuccessMessage"] != null)
+        {
+            <div class="alert alert-info" role="alert">
+                @TempData["SuccessMessage"]
+            </div>
+        }
+        <form asp-controller="Home" asp-action="SignUp" method="post">
             <div class="mb-3">
                 <label for="UserName" class="form-label" asp-for="UserName"></label>
                 <input asp-for="UserName" class="form-control">
