--- a/NetCoreIdentityApp/Views/Home/SignUp.cshtml
+++ b/NetCoreIdentityApp/Views/Home/SignUp.cshtml
@@ -14,26 +14,35 @@
                 @TempData["SuccessMessage"]
             </div>
         }
+
+        <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert">
+        </div>
+        
         <form asp-controller="Home" asp-action="SignUp" method="post">
             <div class="mb-3">
                 <label for="UserName" class="form-label" asp-for="UserName"></label>
                 <input asp-for="UserName" class="form-control">
+                <span class="text-danger" asp-validation-for="UserName"></span>
             </div>
             <div class="mb-3">
                 <label for="Email" class="form-label" asp-for="Email"></label>
                 <input asp-for="Email" class="form-control">
+                <span class="text-danger" asp-validation-for="Email"></span>
             </div>
             <div class="mb-3">
                 <label for="Phone" class="form-label" asp-for="Phone"></label>
                 <input asp-for="Phone" class="form-control">
+                <span class="text-danger" asp-validation-for="Phone"></span>
             </div>
             <div class="mb-3">
                 <label for="Password" class="form-label" asp-for="Password"></label>
                 <input asp-for="Password" class="form-control">
+                <span class="text-danger" asp-validation-for="Password"></span>
             </div>
             <div class="mb-3">
                 <label for="PasswordConfirm" class="form-label" asp-for="PasswordConfirm"></label>
                 <input asp-for="PasswordConfirm" class="form-control">
+                <span class="text-danger" asp-validation-for="PasswordConfirm"></span>
             </div>
             
             <div class="mb-3 form-check">
