client-side validation eklendi, identity optionlar program.cs ye eklendi ve extensiona taşındı

--- a/NetCoreIdentityApp/Views/Home/SignUp.cshtml
+++ b/NetCoreIdentityApp/Views/Home/SignUp.cshtml
@@ -54,3 +54,8 @@
     </div>
 </div>
 
+@*burası Layouttaki scriptlerden sonra gelmesini istediğimiz sayfaya özel scriptler ve kütüphanelerdir*@
+@section Scripts
+{
+    @await Html.PartialAsync("_ValidationScriptsPartial");
+}
