--- a/NetCoreIdentityApp/Views/Shared/_Layout.cshtml
+++ b/NetCoreIdentityApp/Views/Shared/_Layout.cshtml
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/NetCoreIdentityApp.styles.css" asp-append-version="true"/>
+
+    @*required false diyerek bu Layout'u kullananlara bu Css i kullanmak zorunda değilsin diyoruz*@
+    @await RenderSectionAsync("Css", required: false)
 </head>
 <body>
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">NetCoreIdentityApp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -27,6 +30,7 @@
                     </li>
                 </ul>
             </div>
+            <a class="btn btn-outline-success" asp-controller="Home" asp-action="SignUp" >Üye Kayıt</a>
         </div>
     </nav>
 </header>
