--- a/NetCoreIdentityApp/Views/Shared/_NavbarLogin.cshtml
+++ b/NetCoreIdentityApp/Views/Shared/_NavbarLogin.cshtml
@@ -6,7 +6,10 @@
                 @User.Identity.Name
             </a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" asp-route-returnUrl="/Home/Index" asp-controller="Member" asp-action="LogOut">Çıkış Yap</a></li>
+                <li><a class="dropdown-item" asp-controller="Member" asp-action="Index">Profil</a></li>
+                <li><a class="dropdown-item" asp-controller="Member" asp-action="UserEdit">Bilgileri güncelle</a></li>
+                <li><a class="dropdown-item" asp-controller="Member" asp-action="PasswordChange">Şifre güncelle</a></li>
+                <li><a class="dropdown-item" asp-route-returnUrl="/Home/Index" asp-controller="Member" asp-action="LogOut">Çıkış yap</a></li>
             </ul>
         </li>
     </ul>
