kullanıcı resim ekleme işlemleri bitti

--- a/NetCoreIdentityApp/Views/_ViewImports.cshtml
+++ b/NetCoreIdentityApp/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using NetCoreIdentityApp
 @using NetCoreIdentityApp.Models
 @using Entities.ViewModels
+@addTagHelper *, NetCoreIdentityApp
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
