--- a/NetCoreIdentityApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/NetCoreIdentityApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -28,6 +28,14 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Anasayfaya dön</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Roller
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" asp-area="Admin" asp-controller="Roles" asp-action="Index">Rol Listesi</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
