--- a/NetCoreIdentityApp/Areas/Admin/Views/Roles/Index.cshtml
+++ b/NetCoreIdentityApp/Areas/Admin/Views/Roles/Index.cshtml
@@ -23,6 +23,8 @@
             <tr>
                 <th>Id</th>
                 <th>İsim</th>
+                <th>Güncelle</th>
+                <th>Sil</th>
             </tr>
             </thead>
             <tbody>
@@ -31,6 +33,12 @@
                 <tr>
                     <td>@item.Id</td>
                     <td>@item.Name</td>
+                    <td>
+                        <a class="btn btn-warning btn-sm" asp-area="Admin" asp-controller="Roles" asp-action="RoleUpdate" asp-route-id="@item.Id">Güncelle</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-danger btn-sm" asp-area="Admin" asp-controller="Roles" asp-action="RoleDelete" asp-route-id="@item.Id">Sil</a>
+                    </td>
                 </tr>
             }
             </tbody>
