--- a/NetCoreIdentityApp/Areas/Admin/Views/Home/UserList.cshtml
+++ b/NetCoreIdentityApp/Areas/Admin/Views/Home/UserList.cshtml
@@ -11,6 +11,7 @@
         <th>Id</th>
         <th>Kullanıcı Adı</th>
         <th>Email</th>
+        <th>Rol İşlemleri</th>
     </tr>
     </thead>
     <tbody>
@@ -20,6 +21,11 @@
             <td>@item.Id</td>
             <td>@item.Name</td>
             <td>@item.Email</td>
+            <td>
+                <a class="btn btn-primary" asp-area="Admin" asp-controller="Roles" asp-action="AssignRoleToUser" asp-route-id="@item.Id">
+                    Rol Ata
+                </a>
+            </td>
         </tr>
     }
     </tbody>
