userRole e göre sayfalandırma tamamlandı

--- a/NetCoreIdentityApp/Views/Shared/_NavbarLogin.cshtml
+++ b/NetCoreIdentityApp/Views/Shared/_NavbarLogin.cshtml
@@ -1,3 +1,4 @@
+@using System.Security.Claims
 @if (User.Identity.IsAuthenticated)
 {
     <ul class="navbar-nav me-0">
@@ -8,6 +9,10 @@
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" asp-controller="Member" asp-action="Index">Profil</a></li>
                 <li><a class="dropdown-item" asp-controller="Member" asp-action="UserEdit">Bilgileri güncelle</a></li>
+                @if (User.HasClaim(x => x.Type == ClaimTypes.Role && x.Value == "Admin"))
+                {
+                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Home" asp-action="Index">Admin</a></li>
+                }
                 <li><a class="dropdown-item" asp-controller="Member" asp-action="PasswordChange">Şifre güncelle</a></li>
                 <li><a class="dropdown-item" asp-route-returnUrl="/Home/Index" asp-controller="Member" asp-action="LogOut">Çıkış yap</a></li>
             </ul>
