--- a/NetCoreIdentityApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NetCoreIdentityApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using NetCoreIdentityApp.Models
 @using Entities.ViewModels
 @using AdminModel = NetCoreIdentityApp.Areas.Admin.Models
+@addTagHelper *, NetCoreIdentityApp
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
