--- a/NetCoreIdentityApp/Views/Shared/_NavbarLogin.cshtml
+++ b/NetCoreIdentityApp/Views/Shared/_NavbarLogin.cshtml
@@ -13,6 +13,7 @@
                 {
                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Home" asp-action="Index">Admin</a></li>
                 }
+                <li><a class="dropdown-item" asp-controller="Member" asp-action="Claims">Claims</a></li>
                 <li><a class="dropdown-item" asp-controller="Member" asp-action="PasswordChange">Şifre güncelle</a></li>
                 <li><a class="dropdown-item" asp-route-returnUrl="/Home/Index" asp-controller="Member" asp-action="LogOut">Çıkış yap</a></li>
             </ul>
