--- a/NetCoreIdentityApp/Views/Shared/_Layout.cshtml
+++ b/NetCoreIdentityApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="ExchangePage">Borsa Sayfa</a>
                     </li>
-                    
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="ViolencePage">Şiddet Sayfası</a>
+                    </li>
                 </ul>
                 
                 <partial name="_NavbarLogin" />
