--- a/NetCoreIdentityApp.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NetCoreIdentityApp.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,5 +2,5 @@
 @using NetCoreIdentityApp.Web.Models
 @using NetCoreIdentityApp.Entities.ViewModels
 @using AdminModel = NetCoreIdentityApp.Web.Areas.Admin.Models
-@addTagHelper *, NetCoreIdentityApp
+@addTagHelper *, NetCoreIdentityApp.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
