--- a/NetCoreIdentityApp.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NetCoreIdentityApp.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using NetCoreIdentityApp.Web
-@using NetCoreIdentityApp.Web.Models
+@using NetCoreIdentityApp.Core.Models
 @using NetCoreIdentityApp.Entities.ViewModels
 @using AdminModel = NetCoreIdentityApp.Web.Areas.Admin.Models
 @addTagHelper *, NetCoreIdentityApp.Web
