--- a/NetCoreIdentityApp.Web/Views/_ViewImports.cshtml
+++ b/NetCoreIdentityApp.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using NetCoreIdentityApp.Web
-@using NetCoreIdentityApp.Web.Models
+@using NetCoreIdentityApp.Core.Models
 @using NetCoreIdentityApp.Entities.ViewModels
 @addTagHelper *, NetCoreIdentityApp.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
